Fix text align in section txt cols with image

--- a/sass/components/sections/section-txt-cols-with-image.scss
+++ b/sass/components/sections/section-txt-cols-with-image.scss
@@ -3,6 +3,10 @@
 	background-size: cover;
 	background-repeat: no-repeat;
 
+	p {
+		text-align: justify;
+	}
+
 	p:last-child {
 		margin-bottom: 0;
 	}
